users can login, insert topics, posts, comments, view topics, posts, comments, and counters

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 		<script type='text/javascript' src='./f_controllers/profile.js'></script>
 		<script type='text/javascript' src='./f_controllers/users.js'></script>
 		<script type='text/javascript' src='./f_controllers/wall.js'></script>
+		<script type='text/javascript' src='./f_controllers/loggedin.js'></script>
 		<script type='text/javascript' src='./f_factories/user.js'></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.1.5/angular-local-storage.min.js"></script>
 	</head>
