--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>Topics Board</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/stylesheets/log_reg.css">
+		<link rel="stylesheet" href="/static/stylesheets/stylish.css">
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
 		<script type='text/javascript' src='app.js'></script>
 		<script type='text/javascript' src='./f_controllers/profile.js'></script>
-		<script type='text/javascript' src='./f_controllers/users.js'></script>
+		<script type='text/javascript' src='./f_controllers/topics.js'></script>
 		<script type='text/javascript' src='./f_controllers/wall.js'></script>
-		<script type='text/javascript' src='./f_controllers/loggedin.js'></script>
+		<script type='text/javascript' src='./f_controllers/logReg.js'></script>
 		<script type='text/javascript' src='./f_factories/user.js'></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.1.5/angular-local-storage.min.js"></script>
 	</head>
